--- a/PrivacyStatement.html
+++ b/PrivacyStatement.html
@@ -30,8 +30,8 @@
     <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:[Your Contact Information]">[Your Contact Information]</a>.</p>
 
     <address>
-        [Your Name]<br>
-        [Your Contact Information]
+        Shiping Liu<br>
+        Shipinglau@gmail.com
     </address>
 </body>
 </html>
