--- a/PrivacyStatement.html
+++ b/PrivacyStatement.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for rRecord</title>
+    <title>Privacy Policy for RecordH</title>
 </head>
 <body>
     <h1>Privacy Policy</h1>
 
     <p>Last updated: February 5, 2025</p>
 
-    <p>Thank you for using <strong>[Your App Name]</strong> (hereinafter referred to as "the App"). We value your privacy and believe that protecting it is of utmost importance. Therefore, the App does not collect, store, process, share, or transmit any user's personal information or data.</p>
+    <p>Thank you for using <strong>RecordH</strong> (hereinafter referred to as "the App"). We value your privacy and believe that protecting it is of utmost importance. Therefore, the App does not collect, store, process, share, or transmit any user's personal information or data.</p>
 
     <h2>1. Data Collection</h2>
     <p>The App does not actively collect any form of user data, including but not limited to names, addresses, email addresses, or location information. All functionalities operate entirely on the local device without requiring internet access or any other form of data exchange.</p>
@@ -27,7 +27,7 @@
     <h2>5. Changes to This Privacy Policy</h2>
     <p>If we decide to update this Privacy Policy, we will post the changes on this page and update the "Last updated" date at the bottom of this page. We encourage you to periodically review this page for the latest information on our privacy practices.</p>
 
-    <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:[Your Contact Information]">[Your Contact Information]</a>.</p>
+    <p>If you have any questions about this Privacy Policy or need support, please contact us at <a href="mailto:Shipinglau@gmail.com">Shipinglau@gmail.com</a>.</p>
 
     <address>
         Shiping Liu<br>
