--- a/PrivacyStatement.html
+++ b/PrivacyStatement.html
@@ -3,14 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for RecordH</title>
+    <title>Privacy Policy for hRecord</title>
+    <style>
+        :root {
+            --primary-color: #4CAF50;
+            --secondary-color: #45a049;
+            --text-color: #333;
+            --bg-color: #f9f9f9;
+        }
+        
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+
+        h1 {
+            color: var(--primary-color);
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        h2 {
+            color: var(--primary-color);
+            margin-top: 2rem;
+        }
+
+        p {
+            margin-bottom: 1rem;
+        }
+
+        a {
+            color: var(--primary-color);
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        address {
+            margin-top: 3rem;
+            padding-top: 2rem;
+            border-top: 1px solid #ddd;
+            font-style: normal;
+            text-align: center;
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-top: 2rem;
+            padding: 0.75rem 1.5rem;
+            background-color: var(--primary-color);
+            color: white;
+            border-radius: 4px;
+            text-decoration: none;
+        }
+
+        .back-link:hover {
+            background-color: var(--secondary-color);
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
     <h1>Privacy Policy</h1>
 
     <p>Last updated: February 5, 2025</p>
 
-    <p>Thank you for using <strong>RecordH</strong> (hereinafter referred to as "the App"). We value your privacy and believe that protecting it is of utmost importance. Therefore, the App does not collect, store, process, share, or transmit any user's personal information or data.</p>
+    <p>Thank you for using <strong>hRecord</strong> (hereinafter referred to as "the App"). We value your privacy and believe that protecting it is of utmost importance. Therefore, the App does not collect, store, process, share, or transmit any user's personal information or data.</p>
 
     <h2>1. Data Collection</h2>
     <p>The App does not actively collect any form of user data, including but not limited to names, addresses, email addresses, or location information. All functionalities operate entirely on the local device without requiring internet access or any other form of data exchange.</p>
@@ -33,5 +100,8 @@
         Shiping Liu<br>
         Shipinglau@gmail.com
     </address>
+
+    <div style="text-align: center;">
+        <a href="index.html" class="back-link">Back to Home</a>
+    </div>
 </body>
-</html>
