--- a/PrivacyStatement.html
+++ b/PrivacyStatement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for hRecord</title>
+    <title>Privacy Policy - hRecord</title>
     <style>
         :root {
             --primary-color: #4CAF50;
@@ -35,8 +35,24 @@
             margin-top: 2rem;
         }
 
-        p {
+        .bilingual {
+            margin-bottom: 2rem;
+        }
+
+        .section {
+            background: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            margin-bottom: 2rem;
+        }
+
+        .en {
             margin-bottom: 1rem;
+        }
+
+        .cn {
+            color: #666;
         }
 
         a {
@@ -64,44 +80,84 @@
             color: white;
             border-radius: 4px;
             text-decoration: none;
+            transition: background-color 0.3s ease;
         }
 
         .back-link:hover {
             background-color: var(--secondary-color);
             text-decoration: none;
         }
+
+        .back-container {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
+    <div class="section">
+        <div class="bilingual">
+            <h1 class="en">Privacy Policy</h1>
+            <h1 class="cn">隐私政策声明</h1>
+        </div>
 
-    <p>Last updated: February 5, 2025</p>
+        <div class="bilingual">
+            <p class="en">Last updated: February 5, 2025</p>
+            <p class="cn">最后更新：2025年2月5日</p>
+        </div>
 
-    <p>Thank you for using <strong>hRecord</strong> (hereinafter referred to as "the App"). We value your privacy and believe that protecting it is of utmost importance. Therefore, the App does not collect, store, process, share, or transmit any user's personal information or data.</p>
+        <div class="bilingual">
+            <p class="en">Thank you for using <strong>hRecord</strong>. We value your privacy and believe that protecting it is of utmost importance. Therefore, the App does not collect, store, process, share, or transmit any user's personal information or data.</p>
+            <p class="cn">感谢您使用 <strong>hRecord</strong>。我们重视您的隐私，并认为保护隐私至关重要。因此，本应用不会收集、存储、处理、分享或传输任何用户的个人信息或数据。</p>
+        </div>
 
-    <h2>1. Data Collection</h2>
-    <p>The App does not actively collect any form of user data, including but not limited to names, addresses, email addresses, or location information. All functionalities operate entirely on the local device without requiring internet access or any other form of data exchange.</p>
+        <div class="bilingual">
+            <h2 class="en">1. Data Collection</h2>
+            <h2 class="cn">1. 数据收集</h2>
+            <p class="en">The App does not actively collect any form of user data, including but not limited to names, addresses, email addresses, or location information. All functionalities operate entirely on the local device without requiring internet access or any other form of data exchange.</p>
+            <p class="cn">本应用不会主动收集任何形式的用户数据，包括但不限于姓名、地址、电子邮件地址或位置信息。所有功能完全在本地设备上运行，无需互联网连接或任何其他形式的数据交换。</p>
+        </div>
 
-    <h2>2. Third-Party Services</h2>
-    <p>The App does not integrate with any third-party services or SDKs and does not share user data with any third parties, as no data is collected.</p>
+        <div class="bilingual">
+            <h2 class="en">2. Third-Party Services</h2>
+            <h2 class="cn">2. 第三方服务</h2>
+            <p class="en">The App does not integrate with any third-party services or SDKs and does not share user data with any third parties, as no data is collected.</p>
+            <p class="cn">本应用不会与任何第三方服务或SDK集成，也不会与任何第三方共享用户数据，因为我们不会收集任何数据。</p>
+        </div>
 
-    <h2>3. User Rights</h2>
-    <p>Since the App does not collect user data, there are no provisions for users to request access, correction, or deletion of personal data.</p>
+        <div class="bilingual">
+            <h2 class="en">3. User Rights</h2>
+            <h2 class="cn">3. 用户权利</h2>
+            <p class="en">Since the App does not collect user data, there are no provisions for users to request access, correction, or deletion of personal data.</p>
+            <p class="cn">由于本应用不收集用户数据，因此无需为用户提供访问、更正或删除个人数据的规定。</p>
+        </div>
 
-    <h2>4. Security Measures</h2>
-    <p>Although the App does not handle user data, we are committed to providing a secure and reliable service experience.</p>
+        <div class="bilingual">
+            <h2 class="en">4. Security Measures</h2>
+            <h2 class="cn">4. 安全措施</h2>
+            <p class="en">Although the App does not handle user data, we are committed to providing a secure and reliable service experience.</p>
+            <p class="cn">尽管本应用不处理用户数据，但我们致力于提供安全可靠的服务体验。</p>
+        </div>
 
-    <h2>5. Changes to This Privacy Policy</h2>
-    <p>If we decide to update this Privacy Policy, we will post the changes on this page and update the "Last updated" date at the bottom of this page. We encourage you to periodically review this page for the latest information on our privacy practices.</p>
+        <div class="bilingual">
+            <h2 class="en">5. Changes to This Privacy Policy</h2>
+            <h2 class="cn">5. 隐私政策的变更</h2>
+            <p class="en">If we decide to update this Privacy Policy, we will post the changes on this page and update the "Last updated" date at the bottom of this page. We encourage you to periodically review this page for the latest information on our privacy practices.</p>
+            <p class="cn">如果我们决定更新本隐私政策，我们将在本页面上发布更改并更新页面底部的"最后更新"日期。我们建议您定期查看本页面，了解我们最新的隐私实践。</p>
+        </div>
 
-    <p>If you have any questions about this Privacy Policy or need support, please contact us at <a href="mailto:Shipinglau@gmail.com">Shipinglau@gmail.com</a>.</p>
+        <div class="bilingual">
+            <p class="en">If you have any questions about this Privacy Policy or need support, please contact us at <a href="mailto:Shipinglau@gmail.com">Shipinglau@gmail.com</a>.</p>
+            <p class="cn">如果您对本隐私政策有任何问题或需要支持，请通过 <a href="mailto:Shipinglau@gmail.com">Shipinglau@gmail.com</a> 与我们联系。</p>
+        </div>
 
-    <address>
-        Shiping Liu<br>
-        Shipinglau@gmail.com
-    </address>
+        <address>
+            Shiping Liu<br>
+            Shipinglau@gmail.com
+        </address>
+    </div>
 
-    <div style="text-align: center;">
-        <a href="index.html" class="back-link">Back to Home</a>
+    <div class="back-container">
+        <a href="index.html" class="back-link">Back to Home / 返回主页</a>
     </div>
 </body>
+</html>
